# aviaSalesBot

./: .Dockerfile  .gitignore  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml
src/: bot.py  cli.py  config.py
src/api/: __init__.py  exceptions.py  hot_tickets.py  tickets.py
src/helpers/: min_prices.py
src/views/: __init__.py  hot_tickets.py  min_prices.py
