[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Fat Hare <kryizhnyiy.ie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
pandas = "^2.0.1"
pandasql = "^0.7.3"
matplotlib = "^3.7.1"
pytelegrambotapi = "^4.11.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[tool.poetry.scripts]
bot = "src.cli:run_bot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
